Fix long review comments flowing out of container

--- a/src/app/pages/show-details-container/components/review/review.component.scss
+++ b/src/app/pages/show-details-container/components/review/review.component.scss
@@ -8,12 +8,13 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	padding: 40px;
+	padding: 40px 20px;
 }
 
 @media screen and (max-width: 960px) {
 	.content {
 		margin-top: 25px;
+		order: 3;
 	}
 	.review {
 		flex-direction: column;
@@ -24,9 +25,6 @@
 	}
 	.info {
 		order: 1;
-	}
-	.content {
-		order: 3;
 	}
 }
 
@@ -43,6 +41,8 @@
 
 .content {
 	flex: 3;
+	max-width: 100%;
+	word-wrap: break-word;
 }
 
 .image {
@@ -57,9 +57,5 @@
 
 .user-rating {
 	min-width: 0;
-	width: 100%;
-	p {
-		width: 100%;
-		word-wrap: break-word;
-	}
+	word-wrap: break-word;
 }
